--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "eslint": "^7.15.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
