chore: change author's email

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/KurokuTetsuya/slash-bot"
   },
   "license": "AGPL-3.0",
-  "author": "KurokuTetsuya <perumnas.good@gmail.com>",
+  "author": "KurokuTetsuya <contact@zenn.me>",
   "contributors": [
     "Hazmi35 <contact@hzmi.xyz> (https://hzmi.xyz/)",
     "Allvaa (https://allvaa.my.id/)"
