--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     },
     "extends": "@hazmi35/eslint-config/typescript"
   },
+  "dependencies": {
+    "winston": "^3.3.3"
+  },
   "devDependencies": {
     "@hazmi35/eslint-config": "^3.4.0",
     "@types/node": "^14.14.13",
