--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "extends": "@hazmi35/eslint-config/typescript"
   },
   "dependencies": {
+    "@types/express": "^4.17.9",
+    "express": "^4.17.1",
     "got": "^11.8.1",
+    "tweetnacl": "^1.0.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
