--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.9",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "got": "^11.8.1",
     "tweetnacl": "^1.0.3",
