--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "extends": "@hazmi35/eslint-config/typescript"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "got": "^11.8.1",
+    "tweetnacl": "^1.0.3",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@hazmi35/eslint-config": "^3.4.0",
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.13",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
