--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,8 +7,7 @@ updates:
       - dependencies
     open-pull-requests-limit: 99
     package-ecosystem: npm
-    reviewers:
-      - Hazmi35
+    reviewers: []
     schedule:
       interval: daily
       time: "06:00"
@@ -23,8 +22,7 @@ updates:
       - dependencies
     open-pull-requests-limit: 99
     package-ecosystem: github-actions
-    reviewers:
-      - Hazmi35
+    reviewers: []
     schedule: 
       interval: daily
       time: "06:00"
